@@ -281,6 +281,9 @@
 	(tinypath-Info-default-directory-list): Remove backquote.
 	(tinypath-Info-default-directory-list-sym): Remove backquote.
 	(tinypath-message-log-max-sym): Remove backquote.
+	(tinypath-Info-default-directory-list): Add missing backtick.
+	(tinypath-Info-default-directory-list-sym): Add missing backtick.
+	(tinypath-message-log-max-sym): Add missing backtick.
 
 2008-08-10  Jari Aalto  <jari.aalto@cante.net>
 
